2005-07-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.5.14
	released 2.5.13

	* ANNOUNCE:
	* NEWS:
	* configure.in:
	updated for 2.5.13 release

2005-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Graphics.c (do_relieve_rectangle_with_rotation):
	fixed drawing of relief with very small rectangles, i.e. when
	line_width * 2 > height or width

2005-07-04  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: fvwm-menu-desktop changes.

2005-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (get_next_x):
	fixed collision detection of windows on pages other than the current
	one during placement

2005-06-17  Olivier Chapuis  <olivier.chapuis@free.fr>

	* fvwm/move_resize.c (__resize_window):
	Fixed interactive resize (reduction) via the bottom border

	* libs/Fpng.h:
	Typo

2005-06-02  Dan Espen  <dane@mk.telcordia.com>

	* NEWS:
	* fvwm/fvwm.1.in:
	Spelling fix contition -> condition

2005-04-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (style_ids_are_equals):
	(style_id_equals_id):
	(styles_have_same_id):
	(fw_match_style_id):
	(one_fw_can_match_both_ids):
	(cleanup_style_defaults):
	* libs/fsm.c (fprintfhex):
	(CloseDownClient):
	* libs/FGettext.c (fgettext_free_fgpath_list):
	* libs/Parse.c (_get_suffixed_integer_arguments):
	* libs/Graphics.c (AllocNonlinearGradient):
	* libs/PictureUtils.c (build_mapping_table):
	(finish_ct_init):
	made static

	* libs/setpgrp.c:
	* libs/Event.c:
	* libs/FRenderInit.c:
	include own header file

	* libs/System.c (getFileStamp):
	* libs/Fft.c (FftPDumyFunc):
	* libs/FScreen.c (FScreenSetDefaultModuleScreen):
	exported

2005-03-01  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in (Example): Piperead in dynamic menu example,
	not exec.

2005-02-25  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in (Focus): Typos in focus section.

2005-02-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/conditional.c (Circulate):